--- a/KamransFirstProgram/KamransFirstProgram.csproj
+++ b/KamransFirstProgram/KamransFirstProgram.csproj
@@ -33,6 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SmallBasicFun, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TeachingKidsProgramming.CSharp.0.06\lib\SmallBasicFun.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SmallBasicLibrary, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\TeachingKidsProgramming.CSharp.0.06\lib\SmallBasicLibrary.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="01.SimpleSquare\SimpleSquare.cs" />
+    <Compile Include="01.SimpleSquare\SimpleSquareHomework.cs" />
+    <Compile Include="01.SimpleSquare\SimpleSquareQuiz.cs" />
+    <Compile Include="02.Houses\Houses.cs" />
+    <Compile Include="02.Houses\HousesHomework.cs" />
+    <Compile Include="02.Houses\HousesQuiz.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +80,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="privacy_policy.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
